Added some comments

--- a/bar-chart.html
+++ b/bar-chart.html
@@ -17,12 +17,14 @@
       const w = 1000;
       const h = 200;
 
+      // Width and height of the SVG canvas
       const svg = d3
         .select("body")
         .append("svg")
         .attr("width", w)
         .attr("height", h);
 
+      // Create the bar chart with rects and add tooltips with titles
       svg
         .selectAll("rect")
         .data(dataset)
@@ -37,6 +39,7 @@
         .append("title")
         .text((d) => d);
 
+      // Create the label with texts
       svg
         .selectAll("text")
         .data(dataset)
@@ -46,6 +49,7 @@
         .attr("x", (d, i) => i * 30)
         .attr("y", (d, i) => h - 3 * d - 3);
 
+      // Give label some style
       svg.selectAll("text").attr("fill", "red").style("font-size", "25px");
     </script>
   </body>
