--- a/scatterplot.html
+++ b/scatterplot.html
@@ -20,15 +20,18 @@
         [21, 123],
       ];
 
+      // Define width and height of the SVG canvas
       const w = 500;
       const h = 500;
 
+      // Create the SVG canvas
       const svg = d3
         .select("body")
         .append("svg")
         .attr("width", w)
         .attr("height", h);
 
+      // Create the scatter plot by creating a circle for each data
       svg
         .selectAll("circle")
         .data(dataset)
@@ -38,6 +41,7 @@
         .attr("cy", (d) => h - d[1])
         .attr("r", 5);
 
+      // Create labels with texts
       svg
         .selectAll("text")
         .data(dataset)
